objects/ACP_Account_Plan_Attachment__c.object
<CustomObject>
    <description>Esther 04/24/17 – Created for Account Plan. This will help to add different types of attachments to Account Plan.</description>
    <fields>
        <fullName>ACP_Account_Plan__c</fullName>
        <description>Esther 04/24/17 – Created for Account Plan. Lookup Relationship to Account Plan.</description>
        <label>Account Plan</label>
        <referenceTo>ACP_Account_Plan__c</referenceTo>
        <relationshipLabel>Account Plan Attachments</relationshipLabel>
        <relationshipName>Account_Plan_Attachment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACP_Type__c</fullName>
        <description>Esther 04/24/17 – Created for Account Plan. Types of attachments like Logo, Products, Competitor logo etc. Select a type &amp; add an attachment accordingly.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Company Logo</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conga_Attachment_Update__c</fullName>
        <description>Field used to initiate the trigger  ACP_Attachment_CongaImages.</description>
        <label>Conga Attachment Update</label>
        <type>DateTime</type>
    </fields>
    <label>Account Plan Attachment</label>
    <nameField>
        <displayFormat>APA-{00000000}</displayFormat>
        <label>Attachment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>